Module 1/Mod01 Assignments/Hello World/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.8.0_102\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;\\oasdk12.local\students\onhs\MCAVOA3322\APCS\Module One\Mod01 Assignments\Hello World
-d
\\oasdk12.local\students\onhs\MCAVOA3322\APCS\Module One\Mod01 Assignments\Hello World\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\oasdk12.local\students\onhs\MCAVOA3322\APCS\Module One\Mod01 Assignments\Hello World\HelloWorld.java
<---- end of javadoc command ---->
Loading source file \\oasdk12.local\students\onhs\MCAVOA3322\APCS\Module One\Mod01 Assignments\Hello World\HelloWorld.java...
\\oasdk12.local\students\onhs\MCAVOA3322\APCS\Module One\Mod01 Assignments\Hello World\HelloWorld.java:8: error: not a statement
       System.out.println)"Hello World");
                 ^
\\oasdk12.local\students\onhs\MCAVOA3322\APCS\Module One\Mod01 Assignments\Hello World\HelloWorld.java:8: error: ';' expected
       System.out.println)"Hello World");
                         ^
2 errors
